# syria-economic-monitor

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.html  README.md  crop_areas_adm3_2023_revised.csv  crop_areas_adm3_2024_revised.csv  environment.yml  genindex.html  objects.inv  package-lock.json  pyproject.toml  requirements.txt  search.html  searchindex.js  update_notebook.py
.github/ISSUE_TEMPLATE/: project_setup.yaml
.github/workflows/: gh-pages.yml
_sources/: README.md
_sources/docs/: 2023-summer-economic-monitor.md  data.md  foundational_datasets_and_data_products.md  insights-and-indicators.md  team.md
_sources/notebooks/: Foundational Datasets and Data Products.ipynb  Introduction to Data Goods.ipynb
_sources/reports/: 2023-summer-tree-cover-loss.md
docs/: 2023-summer-economic-monitor.html  2023-summer-economic-monitor.md  _config.yml  _toc.yml  bibliography.bib  data.html  data.md  foundational_datasets_and_data_products.html  foundational_datasets_and_data_products.md  insights-and-indicators.html  insights-and-indicators.md  introduction-to-data-goods.md  introduction_to_data_goods.html  introduction_to_data_goods.md  team.html  team.md
docs/extra_html/: 404.html
notebooks/: Data Goods Team.html  Data Goods Team.ipynb  Foundational Datasets and Data Products.html  Foundational Datasets and Data Products.ipynb  Introduction to Data Goods.html  Introduction to Data Goods.ipynb  _master.R  world-bank-api.html  world-bank-package.html
notebooks/ais-analysis/: 01-descriptive-stats.html  Comtrade.ipynb  (+15 more)
reports/: 2023-summer-tree-cover-loss.html  2023-summer-tree-cover-loss.md
(+317 files in other folders)
